--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Header Start -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- Navigation Start -->
         <nav>
             <ul>
                 <li>
@@ -30,7 +31,7 @@
     <!-- Hero/Jumbotron Start -->
     <section alt="Horiseon members around the table are collaborating on a business project" class="hero"></section>
 
-    <!-- Article Start -->
+    <!-- Content Article Start -->
         <content>
             <article id="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimization encompasses content, headings, mobile compatibility, social media, link building and backlink." class="float-left" />
